--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
   <body>
     <div>
       <h1>Hello Test api</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <footer>
+        Coded By
+        <a href="https://github.com/Gudari17" target="_blank"> Diana Roman</a>
+        and code hosted
+        <a href="https://github.com/Gudari17/Vanilla-Weather-M" target="_blank"
+          >on GitHub</a
+        >
+        and website hosted
+        <a href="https://weather-api-2023shecodes.netlify.app/" target="_blank"
+          >on Netlify</a
+        >
+      </footer>
+
       <script src="src/api.js"></script>
     </div>
   </body>
