--- a/index.html
+++ b/index.html
@@ -14,22 +14,37 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div>
-      <h1>Hello Test api</h1>
-      <footer>
-        Coded By
-        <a href="https://github.com/Gudari17" target="_blank"> Diana Roman</a>
-        and code hosted
-        <a href="https://github.com/Gudari17/Vanilla-Weather-M" target="_blank"
-          >on GitHub</a
-        >
-        and website hosted
-        <a href="https://weather-api-2023shecodes.netlify.app/" target="_blank"
-          >on Netlify</a
-        >
-      </footer>
+    <header>
+      <form>
+        <input type=""search" placeholder="Enter a city.." required/>
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Paris</h1>
+        <p>
+          Tuesday 14:49, scattered clouds
+          <br />
+          Humidity: 66%, wind: 3:13km/h
+        </p>
+      </div>
+      <div>🌞12°F</div>
+    </main>
 
-      <script src="src/api.js"></script>
-    </div>
+    <footer>
+      Coded By
+      <a href="https://github.com/Gudari17" target="_blank"> Diana Roman</a>
+      is
+      <a href="https://github.com/Gudari17/Vanilla-Weather-M" target="_blank"
+        >open sourced on GitHub</a
+      >
+
+      and website hosted
+      <a href="https://weather-api-2023shecodes.netlify.app/" target="_blank"
+        >on Netlify</a
+      >
+    </footer>
+    <script src="src/api.js"></script>
   </body>
 </html>
