--- a/index.html
+++ b/index.html
@@ -9,42 +9,50 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/styles.css" />
 
     <title>Weather App</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type=""search" placeholder="Enter a city.." required/>
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Paris</h1>
-        <p>
-          Tuesday 14:49, scattered clouds
-          <br />
-          Humidity: 66%, wind: 3:13km/h
-        </p>
-      </div>
-      <div>🌞12°F</div>
-    </main>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type=""search" placeholder="Enter a city.." required/>
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Paris</h1>
+          <p>
+            Tuesday 14:49, scattered clouds
+            <br />
+            Humidity: 66%, wind: 3:13km/h
+          </p>
+        </div>
+        <div>🌞12°F</div>
+      </main>
 
-    <footer>
-      Coded By
-      <a href="https://github.com/Gudari17" target="_blank"> Diana Roman</a>
-      is
-      <a href="https://github.com/Gudari17/Vanilla-Weather-M" target="_blank"
-        >open sourced on GitHub</a
-      >
+      <footer>
+        Coded By
+        <a href="https://github.com/Gudari17" target="_blank"> Diana Roman</a>
+        is
+        <a href="https://github.com/Gudari17/Vanilla-Weather-M" target="_blank"
+          >open sourced on GitHub</a
+        >
 
-      and website hosted
-      <a href="https://weather-api-2023shecodes.netlify.app/" target="_blank"
-        >on Netlify</a
-      >
-    </footer>
+        and website hosted
+        <a href="https://weather-api-2023shecodes.netlify.app/" target="_blank"
+          >on Netlify</a
+        >
+      </footer>
+    </div>
     <script src="src/api.js"></script>
   </body>
 </html>
