--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,37 +16,46 @@
   <body>
     <div class="weather-app">
       <header>
-        <form>
-          <input type=""search" placeholder="Enter a city.." required/>
-          <input type="submit" value="Search" />
+        <form class="search form" id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
       <main>
-        <div>
-          <h1>Paris</h1>
-          <p>
-            Tuesday 14:49, scattered clouds
-            <br />
-            Humidity: 66%, wind: 3:13km/h
-          </p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
+              Tuesday 14:49, scattered clouds
+              <br />
+              Humidity: <strong>66%</strong>, Wind: <strong>3:13km/h</strong>
+            </p>
+          </div>
+          <div class="weather-app-temperature-container">
+            <div class="weather-icon">🌞</div>
+            <div class="weather-app-temperature">12</div>
+            <div class="weather-app-unit">°C</div>
+          </div>
         </div>
-        <div>🌞12°F</div>
       </main>
 
       <footer>
-        Coded By
+        This project was coded by
         <a href="https://github.com/Gudari17" target="_blank"> Diana Roman</a>
         is
         <a href="https://github.com/Gudari17/Vanilla-Weather-M" target="_blank"
           >open sourced on GitHub</a
         >
-
         and website hosted
         <a href="https://weather-api-2023shecodes.netlify.app/" target="_blank"
           >on Netlify</a
         >
       </footer>
     </div>
-    <script src="src/api.js"></script>
   </body>
 </html>
