--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
             <p class="weather-app-details">
               Tuesday 14:49, scattered clouds
               <br />
-              Humidity: <strong>66%</strong>, Wind: <strong>3:13km/h</strong>
+              Humidity: <strong><span id="humidity">66%</span></strong
+              >, Wind: <strong>3:13km/h</strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
-            <div class="weather-icon">🌞</div>
-            <div class="weather-app-temperature">12</div>
-            <div class="weather-app-unit">°C</div>
+            <div class="weather-icon" id="icon">🌞</div>
+            <div class="weather-app-temperature" id="temperature">12</div>
+            <div class="weather-app-unit" id="units">°F</div>
           </div>
         </div>
       </main>
