--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
               <span id="time"></span>,
-              <span id="description"> </span>
+              <span id="description"></span>
               <br />
               Humidity: <strong id="humidity"></strong>, Wind:
               <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-app-temperature-container">
-            <div class="weather-icon" id="icon">🌞</div>
-            <div class="weather-app-temperature" id="temperature">12</div>
+            <div id="icon"></div>
+            <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-app-unit" id="units">°F</div>
           </div>
         </div>
